src/components/content-header-card/content-header-card.module.css
.contentHeaderCard {
	padding: 0;

	& .cardTop {
		padding: 16px;
		display: flex;

		& .icon {
			margin-right: 12px;
			display: none;

			@media (--dev-dot-tablet-up) {
				display: block;
			}
		}

		& .content {
			flex-grow: 1;

			& .upper {
				display: flex;
				gap: 16px;
				flex-direction: column-reverse;
				@media (--dev-dot-tablet-up) {
					flex-direction: row;
				}

				& .left {
					flex-grow: 1;

					& .titleWrap {
						display: flex;
						flex-wrap: wrap;
						align-items: baseline;
						@media (--dev-dot-tablet-up) {
							flex-wrap: unset;
						}

						& .title {
							color: var(--token-color-foreground-strong);
						}

						& .attribution {
							color: var(--token-color-foreground-faint);
							margin-left: 4px;
						}
					}

					& .description {
						margin-top: 2px;
						color: var(--token-color-foreground-primary);
					}
				}

				& .dropdown {
					flex-shrink: 0;
					width: 100%;
					& > button {
						width: 100%;
					}

					@media (--dev-dot-tablet-up) {
						width: auto;
						& > button {
							width: auto;
						}
					}
				}
			}
		}

		& .lower {
			display: flex;
			flex-direction: column;
			align-items: flex-start;
			@media (--dev-dot-tablet-up) {
				flex-direction: row;
				align-items: flex-end;
			}

			& .badgeList {
				margin-top: 16px;
			}

			& .note {
				color: var(--token-color-foreground-faint);
				flex-grow: 1;
				text-align: right;
				margin-top: 12px;
				@media (--dev-dot-tablet-up) {
					margin-top: 6px;
				}
			}
		}
	}

	& .cardBottom {
		padding: 12px 16px;
		background: var(--token-color-surface-faint);

		/* This is the color from --token-surface-base-box-shadow,
		which the color value from it is not in a variable alone */
		border-top: 1px solid rgba(101, 106, 118, 0.2);
		border-radius: 0 0 6px 6px;
		display: flex;
		flex-direction: column;
		align-items: flex-start;
		gap: 16px;

		@media (--dev-dot-tablet-up) {
			flex-direction: row;
			justify-content: space-between;
			align-items: center;
		}

		& .linksList {
			list-style: none;
			display: flex;
			padding: 0;
			margin: 0;
			& li {
				&:not(:first-of-type) {
					margin-left: 12px;
				}
				& > * {
					/* TODO: Rather than override our existing link component, 
					we should eject or build in support for what we're trying
					to do here. These styles assume the StandaloneLink styles
					are part of its contract, but they are not and are subject
					to change */
					text-decoration: underline;
					color: var(--token-color-foreground-primary);
					&:hover {
						color: var(--token-color-foreground-strong);
					}
				}
			}
		}

		& .buttonsList {
			padding: 0;
			margin: 0;
			list-style: none;
			display: flex;
			flex-grow: 1;
			flex-direction: row;
			@media (--dev-dot-tablet-up) {
				flex-direction: row-reverse;
			}

			/* In the case where there are only buttons in the bottom row,
			we want to left-align them always */
			&.buttonsOnly {
				flex-direction: row;
			}

			& li {
				&:not(:first-of-type) {
					margin-left: 12px;
					@media (--dev-dot-tablet-up) {
						margin-right: 12px;
						margin-left: 0;
					}
				}
			}
		}
	}
}

